Name: webdriver
Version: 0.6.0.1
Cabal-Version: >= 1.8
License: BSD3
License-File: LICENSE
Author: Adam Curtis
Maintainer: acurtis@spsu.edu
Homepage: https://github.com/kallisti-dev/hs-webdriver
Category: Web, Browser, Testing
Synopsis: a Haskell client for the Selenium WebDriver protocol
Build-type: Simple
Extra-source-files: README.md, TODO, CHANGELOG.md, .ghci
Description:
        A Selenium WebDriver client for Haskell.
        You can use it to automate browser sessions
        for testing, system administration, etc.
        .
        For more information about Selenium itself, see
        <http://seleniumhq.org/>
        .
        To find out what's been changed in this version and others,
        see the change log at
        <https://github.com/kallisti-dev/hs-webdriver/blob/master/CHANGELOG.md>

source-repository head
  type: git
  location: git://github.com/kallisti-dev/hs-webdriver.git

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:   base == 4.*
                 , aeson >= 0.6.2.0 && < 0.8
                 , network >= 2.4 && < 2.6
                 , http-client >= 0.3 && < 0.4
                 , http-types >= 0.8 && < 0.9
                 , text >= 0.11.3 && < 1.2.0.0
                 , bytestring >= 0.9 && < 0.11
                 , attoparsec < 0.12
                 , base64-bytestring >= 1.0 && < 1.1
                 , mtl >= 2.0 && < 2.3
                 , transformers >= 0.2 && < 0.5
                 , monad-control == 0.3.*     
                 , transformers-base >= 0.1 && < 1.0
                 , lifted-base >= 0.1 && < 0.3
                 , zip-archive >= 0.1.1.8 && < 0.3
                 , directory == 1.*
                 , filepath == 1.*
                 , directory-tree == 0.11.*
                 , temporary >= 1.0 && < 2.0
                 , time == 1.*
                 , unordered-containers >= 0.1.3 && < 0.4
                 , vector >= 0.3 && < 0.11
                 , exceptions >= 0.4 && < 0.6
                 , scientific >= 0.2 && < 0.4
                 , data-default >= 0.2 && < 1.0
                 , cond >= 0.3 && < 0.5

  exposed-modules: Test.WebDriver
                   Test.WebDriver.Class
                   Test.WebDriver.Monad
                   Test.WebDriver.Session
                   Test.WebDriver.Config
                   Test.WebDriver.Exceptions
                   Test.WebDriver.Commands
                   Test.WebDriver.Commands.Wait
                   Test.WebDriver.Commands.Internal
                   Test.WebDriver.Common.Profile
                   Test.WebDriver.Firefox.Profile
                   Test.WebDriver.Chrome.Extension
                   Test.WebDriver.Capabilities
                   Test.WebDriver.Types
                   Test.WebDriver.JSON
                   Test.WebDriver.Utils

  other-modules:   Test.WebDriver.Internal

Test-Suite test-search-baidu
  type: exitcode-stdio-1.0
  main-is: test/search-baidu.hs
  ghc-options: -threaded
  build-depends: base,
                 webdriver,
                 text,
                 parallel
