Name: webdriver
Version: 0.8.1
Cabal-Version: >= 1.10
License: BSD3
License-File: LICENSE
Author: Adam Curtis
Maintainer: kallisti.dev@gmail.com
Homepage: https://github.com/kallisti-dev/hs-webdriver
Bug-Reports: https://github.com/kallisti-dev/hs-webdriver/issues
Category: Web, Browser, Testing, WebDriver, Selenium
Synopsis: a Haskell client for the Selenium WebDriver protocol
Build-Type: Simple
Extra-Source-Files: README.md, TODO.md, CHANGELOG.md, .ghci
Tested-With: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2 
Description:
        A Selenium WebDriver client for Haskell.
        You can use it to automate browser sessions
        for testing, system administration, etc.
        .
        For more information about Selenium itself, see
        <http://seleniumhq.org/>
        .
        To find out what's been changed in this version and others,
        see the change log at
        <https://github.com/kallisti-dev/hs-webdriver/blob/master/CHANGELOG.md>

Source-Repository head
  type: git
  location: git://github.com/kallisti-dev/hs-webdriver.git
  
Flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

Flag developer
  description: Package development mode
  default: False
  manual: True

Library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(developer)
    cpp-options: -DCABAL_BUILD_DEVELOPER
  build-depends:   base == 4.*
                 , aeson >= 0.6.2.0 && < 0.12
                 , http-client >= 0.3 && < 0.5
                 , http-types >= 0.8 && < 0.10
                 , text >= 0.11.3 && < 1.3
                 , bytestring >= 0.9 && < 0.11
                 , attoparsec >= 0.10 && < 0.14
                 , base64-bytestring >= 1.0 && < 1.1
                 , transformers >= 0.4 && < 0.5
                 , monad-control >= 0.3 && < 1.1
                 , transformers-base >= 0.1 && < 1.0
                 , lifted-base >= 0.1 && < 0.3
                 , zip-archive >= 0.1.1.8 && < 0.3
                 , directory == 1.*
                 , filepath == 1.*
                 , directory-tree >= 0.11 && < 0.13
                 , temporary >= 1.0 && < 2.0
                 , time == 1.*
                 , unordered-containers >= 0.1.3 && < 0.4
                 , vector >= 0.3 && < 0.12
                 , exceptions >= 0.4 && < 0.9
                 , scientific >= 0.2 && < 0.4
                 , data-default-class < 0.1
                 
  if flag(network-uri)
      build-depends: network-uri >= 2.6, network >= 2.6
  else
      build-depends: network-uri < 2.6, network >= 2.4 && < 2.6

  exposed-modules: Test.WebDriver
                   Test.WebDriver.Class
                   Test.WebDriver.Monad
                   Test.WebDriver.Session
                   Test.WebDriver.Session.History
                   Test.WebDriver.Config
                   Test.WebDriver.Exceptions
                   Test.WebDriver.Commands
                   Test.WebDriver.Commands.Wait
                   Test.WebDriver.Commands.Internal
                   Test.WebDriver.Common.Profile
                   Test.WebDriver.Firefox.Profile
                   Test.WebDriver.Chrome.Extension
                   Test.WebDriver.Capabilities
                   Test.WebDriver.Types
                   Test.WebDriver.JSON
                   Test.WebDriver.Utils

  other-modules:   Test.WebDriver.Internal
                   Test.WebDriver.Exceptions.Internal
